z-index fixd

--- a/src/common/progress-bar.css
+++ b/src/common/progress-bar.css
@@ -13,7 +13,7 @@
     --percentage: var(--value);
     --primary: #ffb400;
     --secondary: #D1D5DB;
-    --size: 110px;
+    --size: 100px;
     animation: progress 2s 0.5s forwards;
     width: var(--size);
     aspect-ratio: 1;
